--- a/index.html
+++ b/index.html
@@ -1178,12 +1178,12 @@
                     <!--    code here  -->
                     <div class="row">
                         <div class="col-12 margin-bottom">
-                            <label for=" -inputItemCode" class="margin-left-0 form-label">Item Code :</label>
-                            <input type="text" id=" -inputItemCode" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                            <label for="itemCodeS" class="margin-left-0 form-label">Item Code :</label>
+                            <input type="text" id="itemCodeS" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                         </div>
                         <div class="col-12 margin-bottom">
-                            <label for=" _inputItemName" class="margin-left-0 form-label inputFieldMargin">Item Name :</label>
-                            <input type="text" id=" _inputItemName" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                            <label for="itemNames" class="margin-left-0 form-label inputFieldMargin">Item Name :</label>
+                            <input type="text" id="itemNameS" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                         </div>
                     </div>
 
@@ -1193,8 +1193,8 @@
                             <input type="text" id="inputCity" class="margin-left-0 form-control" placeholder="select city" aria-label="City">
                         </div>
                         <div class="col-12 margin-bottom">
-                            <label for="priceU" class="margin-left-0 form-label inputFieldMargin">Unit Price :</label>
-                            <input type="text" id="priceU" class="margin-left-0 form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                            <label for="priceS" class="margin-left-0 form-label inputFieldMargin">Unit Price :</label>
+                            <input type="text" id="priceS" class="margin-left-0 form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
                         </div>
                     </div>
                 </div>
@@ -1218,12 +1218,12 @@
                     <!--    code here  -->
                     <div class="row">
                         <div class="col-12 margin-bottom">
-                            <label for="_inputItemCode" class="margin-left-0 form-label">Item Code :</label>
-                            <input type="text" id="_inputItemCode" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                            <label for="itemCodeR" class="margin-left-0 form-label">Item Code :</label>
+                            <input type="text" id="itemCodeR" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                         </div>
                         <div class="col-12 margin-bottom">
-                            <label for="-inputItemName" class="margin-left-0 form-label inputFieldMargin">Item Name :</label>
-                            <input type="text" id="-inputItemName" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                            <label for="itemNameR" class="margin-left-0 form-label inputFieldMargin">Item Name :</label>
+                            <input type="text" id="itemNameR" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                         </div>
                     </div>
                 </div>
