--- a/index.html
+++ b/index.html
@@ -1189,8 +1189,8 @@
 
                     <div class="row">
                         <div class="col-12 margin-bottom">
-                            <label for="inputCity" class="margin-left-0 form-label ">QTY On Hand :</label>
-                            <input type="text" id="inputCity" class="margin-left-0 form-control" placeholder="select city" aria-label="City">
+                            <label for="qty" class="margin-left-0 form-label ">QTY On Hand :</label>
+                            <input type="text" id="qty" class="margin-left-0 form-control" placeholder="select city" aria-label="City">
                         </div>
                         <div class="col-12 margin-bottom">
                             <label for="priceS" class="margin-left-0 form-label inputFieldMargin">Unit Price :</label>
@@ -1200,7 +1200,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary saveChanges">Save changes</button>
+                    <button  id="updateS" type="button" class="btn btn-primary saveChanges">Save changes</button>
                 </div>
             </div>
         </div>
