--- a/index.html
+++ b/index.html
@@ -1229,7 +1229,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary  saveChanges">Save changes</button>
+                    <button id="deleteS" type="button" class="btn btn-primary  saveChanges">Save changes</button>
                 </div>
             </div>
         </div>
