placeholder name change

--- a/index.html
+++ b/index.html
@@ -1190,11 +1190,11 @@
                     <div class="row">
                         <div class="col-12 margin-bottom">
                             <label for="qty" class="margin-left-0 form-label ">QTY On Hand :</label>
-                            <input type="text" id="qty" class="margin-left-0 form-control" placeholder="select city" aria-label="City">
+                            <input type="text" id="qty" class="margin-left-0 form-control" placeholder="qty on hand" aria-label="City">
                         </div>
                         <div class="col-12 margin-bottom">
                             <label for="priceS" class="margin-left-0 form-label inputFieldMargin">Unit Price :</label>
-                            <input type="text" id="priceS" class="margin-left-0 form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                            <input type="text" id="priceS" class="margin-left-0 form-control inputFieldMargin" placeholder="unit price" aria-label="telephone">
                         </div>
                     </div>
                 </div>
