--- a/index.html
+++ b/index.html
@@ -1251,7 +1251,9 @@
             <div class="row">
                 <div class="col-5 margin-bottom">
                     <label for="inputCustomerId" class="form-label">Customer Id :</label>
-                    <input type="text" id="inputCustomerId-" class="form-control" placeholder="customer id" aria-label="Customer city">
+                    <select id="selectCustomerId" class="form-select">
+
+                    </select>
                 </div>
                 <div class="col-7 margin-bottom">
                     <label for="inputCustomerName" class="form-label inputFieldMargin">Customer Name :</label>
