--- a/index.html
+++ b/index.html
@@ -1256,19 +1256,19 @@
                     </select>
                 </div>
                 <div class="col-7 margin-bottom">
-                    <label for="inputCustomerName" class="form-label inputFieldMargin">Customer Name :</label>
-                    <input type="text" id="inputCustomerName-" class="form-control inputFieldMargin" placeholder="customer name" aria-label="Customer Name">
+                    <label for="cusName" class="form-label inputFieldMargin">Customer Name :</label>
+                    <input type="text" id="cusName" class="form-control inputFieldMargin" placeholder="customer name" aria-label="Customer Name">
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-5 margin-bottom">
-                    <label for="inputCityP" class="form-label ">City :</label>
-                    <input type="text" id="inputCityP" class="form-control" placeholder="select city" aria-label="City">
+                    <label for="cusCity" class="form-label ">City :</label>
+                    <input type="text" id="cusCity" class="form-control" placeholder="select city" aria-label="City">
                 </div>
                 <div class="col-7 margin-bottom">
-                    <label for="inputTel" class="form-label inputFieldMargin">Telephone :</label>
-                    <input type="text" id="inputTel" class="form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                    <label for="cusTel" class="form-label inputFieldMargin">Telephone :</label>
+                    <input type="text" id="cusTel" class="form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
                 </div>
             </div>
 
@@ -1285,25 +1285,25 @@
                     </select>
                 </div>
                 <div class="col-7 margin-bottom">
-                    <label for="inputItemName" class="form-label inputFieldMargin">Item Name :</label>
-                    <input type="text" id="inputItemName " class="form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                    <label for="itemNameP" class="form-label inputFieldMargin">Item Name :</label>
+                    <input type="text" id="itemNameP" class="form-control inputFieldMargin" placeholder="item name" aria-label="item name">
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-5 margin-bottom">
-                    <label for="qtyOnHand" class="form-label">QTY On Hand :</label>
-                    <input type="text" id="qtyOnHand " class="form-control" placeholder="QTY On Hand" aria-label="QTY On Hand">
+                    <label for="qtyOnHandP" class="form-label">QTY On Hand :</label>
+                    <input type="text" id="qtyOnHandP" class="form-control" placeholder="QTY On Hand" aria-label="QTY On Hand">
                 </div>
                 <div class="col-7 margin-bottom">
-                    <label for="orderQTY" class="form-label inputFieldMargin">Order QTY :</label>
-                    <input type="text" id="orderQTY " class="form-control inputFieldMargin" placeholder="order qty" aria-label="orderQTY">
+                    <label for="orderQTYP" class="form-label inputFieldMargin">Order QTY :</label>
+                    <input type="text" id="orderQTYP" class="form-control inputFieldMargin" placeholder="order qty" aria-label="orderQTY">
                 </div>
             </div>
 
             <div class="col-md-12 marginZero">
-                <label for="inputPrice" class="form-label">Price</label>
-                <input type="text" class="form-control" id="inputPrice " placeholder="price">
+                <label for="inputPriceP" class="form-label">Price</label>
+                <input type="text" class="form-control" id="inputPriceP" placeholder="price">
             </div>
             <div class="col-12">
                 <button id="addToCartBtn" type="button" class="btn btn-primary btnSize addToCartBtn-color btn-addToCart btn-all"><span> Add To Cart </span></button>
