--- a/index.html
+++ b/index.html
@@ -1315,43 +1315,13 @@
                     <h5 class="fonts-size">Billing Your Order</h5>
                 </div>
 
-                <div class=" itemsDetails">
-                    <div class="col-6 ">
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
-                        <p>Item Name</p>
+                <div class="itemsDetails">
+                    <div id="itemNameLabel" class="col-6 ">
+
                     </div>
 
                     <div id="itemPriceListMainDiv" class="col-6">
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
-                        <p class="prices">0.00</p>
+
                     </div>
                 </div>
 
