--- a/index.html
+++ b/index.html
@@ -1333,9 +1333,9 @@
                     </div>
 
                     <div class="billPrices col-6 pricesContentPosition">
-                        <h5 class="prices margin-bottom">0.00</h5>
-                        <h5 class="prices margin-bottom">0.00</h5>
-                        <h5 class="prices">0.00</h5>
+                        <h5 id="subTotal" class="prices margin-bottom">0.00</h5>
+                        <h5 id="discount" class="prices margin-bottom">0.00</h5>
+                        <h5 id="balance" class="prices">0.00</h5>
                     </div>
                 </div>
 
