--- a/index.html
+++ b/index.html
@@ -1490,26 +1490,11 @@
                                 <label for="inputPrice" class="form-label">Price</label>
                                 <input type="text" class="form-control" id="inputPrice" placeholder="price">
                             </div>
-
-<!--                            <div class="subTotal col-4">-->
-<!--                                <h6 class="">Sub Total</h6>-->
-<!--                                <h5 class="">0.00</h5>-->
-<!--                            </div>-->
-
-<!--                            <div class="discount col-4">-->
-<!--                                <h6 class="textAlignCenter">Discount</h6>-->
-<!--                                <h5 class="textAlignCenter">0.00</h5>-->
-<!--                            </div>-->
-
-<!--                            <div class="balance col-4">-->
-<!--                                <h6 class="textAlignRight">Balance</h6>-->
-<!--                                <h5 class="textAlignRight">0.00</h5>-->
-<!--                            </div>-->
                         </form>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary saveChanges">Save changes</button>
+                        <button id="updateOrderDetail" type="button" class="btn btn-primary saveChanges">Save changes</button>
                     </div>
                 </div>
             </div>
